# odin

./: .env.example  .gitignore  .ruff.toml  LICENSE  Makefile  README.md  pyproject.toml
apps/macos/Odin/: Package.swift  README.md
apps/macos/Odin/Sources/Odin/: AgentRunner.swift  AppSettings.swift  ChatPanel.swift  DesignSystem.swift  HotkeyFormatter.swift  IconLoader.swift  KeychainStore.swift  OdinApp.swift  OnboardingView.swift  (+4 more)
apps/macos/OdinApp/: Package.swift  README.md
examples/: check_processing.py  check_screen.py  demo_click.py  interactive.py  run_agent.py
scripts/: build_app_bundle.sh  bundle_python.sh  crop_icons.py
src/odin/: __init__.py  __main__.py  app_runner.py  log.py
src/odin/action/: __init__.py  controller.py  elements.py  keys.py  safety.py
src/odin/agent/: __init__.py  actions.py  coordinates.py  core.py  events.py  executor.py  loop.py  memory.py  parser.py  tracing.py  types.py
src/odin/llm/: __init__.py  base.py  client.py  context.py  factory.py  prompts.py
src/odin/llm/providers/: __init__.py  bedrock.py  openrouter.py
src/odin/perception/: __init__.py  accessibility.py  processing.py  screen.py
src/odin/platform/: __init__.py  base.py  macos.py
tests/: manual_test_processing.py  manual_test_screen.py  test_action.py  test_agent.py  test_app_runner.py
tests/action/: test_controller.py  test_safety.py
tests/agent/: fakes.py  helpers.py  test_core.py  test_memory.py  test_parser.py
tests/llm/: test_context.py  test_providers.py
tests/perception/: test_accessibility.py  test_accessibility_delta.py  test_screen.py
(+30 files in other folders)
