[project]
name = "odin"
version = "0.1.0"
description = "AI-powered computer automation agent using vision LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.1.0",
    "pydantic>=2.7",
    "pyobjc-framework-ApplicationServices>=12.1; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=12.1; sys_platform == 'darwin'",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
openrouter = [
    "httpx>=0.28.0",
]
bedrock = [
    "boto3>=1.34.122",
]
all = [
    "boto3>=1.34.122",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.14",
]
